--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -42,15 +42,10 @@ table {
 	background:#eaebec;
 	margin:20px;
 	border:#ccc 1px solid;
-
-	-moz-border-radius:3px;
-	-webkit-border-radius:3px;
 	border-radius:3px;
-
-	-moz-box-shadow: 0 1px 2px #d1d1d1;
-	-webkit-box-shadow: 0 1px 2px #d1d1d1;
 	box-shadow: 0 1px 2px #d1d1d1;
 }
+
 table th {
 	padding:21px 25px 22px 25px;
 	border-top:1px solid #fafafa;
@@ -60,28 +55,30 @@ table th {
 	background: -webkit-gradient(linear, left top, left bottom, from(#ededed), to(#ebebeb));
 	background: -moz-linear-gradient(top,  #ededed,  #ebebeb);
 }
+
 table th:first-child {
 	text-align: left;
 	padding-left:20px;
 }
+
 table tr:first-child th:first-child {
-	-moz-border-radius-topleft:3px;
-	-webkit-border-top-left-radius:3px;
 	border-top-left-radius:3px;
 }
+
 table tr:first-child th:last-child {
-	-moz-border-radius-topright:3px;
-	-webkit-border-top-right-radius:3px;
 	border-top-right-radius:3px;
 }
+
 table tr {
 	text-align: center;
 	padding-left:20px;
 }
+
 table td:first-child {
 	padding-left:20px;
 	border-left: 0;
 }
+
 table td {
 	text-align: left;
 	padding:18px;
@@ -93,26 +90,59 @@ table td {
 	background: -webkit-gradient(linear, left top, left bottom, from(#fbfbfb), to(#fafafa));
 	background: -moz-linear-gradient(top,  #fbfbfb,  #fafafa);
 }
+
 table tr.even td {
 	background: #f6f6f6;
 	background: -webkit-gradient(linear, left top, left bottom, from(#f8f8f8), to(#f6f6f6));
 	background: -moz-linear-gradient(top,  #f8f8f8,  #f6f6f6);
 }
+
 table tr:last-child td {
 	border-bottom:0;
 }
+
 table tr:last-child td:first-child {
-	-moz-border-radius-bottomleft:3px;
-	-webkit-border-bottom-left-radius:3px;
 	border-bottom-left-radius:3px;
 }
+
 table tr:last-child td:last-child {
-	-moz-border-radius-bottomright:3px;
-	-webkit-border-bottom-right-radius:3px;
 	border-bottom-right-radius:3px;
 }
+
 table tr:hover td {
 	background: #f2f2f2;
 	background: -webkit-gradient(linear, left top, left bottom, from(#f2f2f2), to(#f0f0f0));
 	background: -moz-linear-gradient(top,  #f2f2f2,  #f0f0f0);	
+}
+
+ul {
+	padding: 0;
+	margin: 0 0 2em 0;
+	list-style-type: none;
+}
+
+li {
+	margin-bottom: 1em;
+}
+
+a.button-link {
+	color: inherit;
+	font-size: 1.1em;
+	font-weight: 500;
+	text-decoration: none;
+    padding: 5px 10px;
+    background: #4479BA;
+    border-radius: 4px;
+    border: solid 1px #20538D;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+	transition-duration: .5s;
+	display: inline-block;
+	min-width: 700px;
+}
+
+a.button-link:hover, a.button-link:focus {
+	background: #356094;
+    border: solid 1px #2A4E77;
+    text-decoration: none;
 }
