--- a/views/users.pug
+++ b/views/users.pug
@@ -7,12 +7,14 @@ block content
         table
             thead
                 tr
+                    th ID
                     th Last Name
                     th First Name
                     th EMail
             tbody
                 each user in users
                     tr(class=(i % 2 == 0) ? 'odd' : 'even') 
+                      td #{user.id}
                       td #{user.lastname}
                       td #{user.firstname} 
                       td #{user.email} 
