better form sample texts

--- a/views/useredit.pug
+++ b/views/useredit.pug
@@ -31,10 +31,10 @@ block content
         input#street.form-control(type='text', placeholder='street' name='street')
         div.form-group
         label(for='creditcardcmp') Creditcard Company:
-        input#creditcardcmp.form-control(type='text', placeholder='creditcardcmp' name='creditcardcmp')
+        input#creditcardcmp.form-control(type='text', placeholder='Mastercard, Visa, etc.' name='creditcardcmp')
         div.form-group
         label(for='creditcardpan') Creditcard Pan:
-        input#creditcardpan.form-control(type='text', placeholder='1111222233334444' name='creditcardpan')
+        input#creditcardpan.form-control(type='text', placeholder='5454545454545454' name='creditcardpan')
         div.form-group
         label(for='creditcardcvv') Creditcard CVV:
         input#creditcardcvv.form-control(type='text', placeholder='123' name='creditcardcvv')
