--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,141 +9,31 @@ body {
 	background-repeat: no-repeat;
     background-position: center 0;
 	padding: 20px;
-	color: azure;
+	color:#2A4E77;
 	font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 div.box{
 	background-color: lightblue;
 	opacity: 0.9;
-	padding: .5em 2em; 
+	padding: 1.5em; 
 	border-radius: 4px;
     border: solid 1px #20538D;
 	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
-	/*box-shadow: 10px 10px 5px #202020;*/
 }
 
-h1 {
+h1.title {
 	color: white;
 	font-family: Simpsons;
 	text-shadow: 4px 4px 8px #202020;
-	margin-bottom: 1.5em;
+	margin-bottom: 1em;
 }
 
 h2 {
 	margin-bottom: 1em;
 }
 
-table {
-	font-family:Arial, Helvetica, sans-serif;
-	color:#666;
-	font-size:12px;
-	text-shadow: 1px 1px 0px #fff;
-	background:#eaebec;
-	margin:20px;
-	border:#ccc 1px solid;
-	border-radius:3px;
-	box-shadow: 0 1px 2px #d1d1d1;
-}
-
-table th {
-	padding:21px 25px 22px 25px;
-	border-top:1px solid #fafafa;
-	border-bottom:1px solid #e0e0e0;
-
-	background: #ededed;
-	background: -webkit-gradient(linear, left top, left bottom, from(#ededed), to(#ebebeb));
-	background: -moz-linear-gradient(top,  #ededed,  #ebebeb);
-}
-
-table th:first-child {
-	text-align: left;
-	padding-left:20px;
-}
-
-table tr:first-child th:first-child {
-	border-top-left-radius:3px;
-}
-
-table tr:first-child th:last-child {
-	border-top-right-radius:3px;
-}
-
-table tr {
-	text-align: center;
-	padding-left:20px;
-}
-
-table td:first-child {
-	text-align: right;
-	padding-left:20px;
-	border-left: 0;
-}
-
-table td {
-	text-align: left;
-	padding:18px;
-	border-top: 1px solid #ffffff;
-	border-bottom:1px solid #e0e0e0;
-	border-left: 1px solid #e0e0e0;
-
-	background: #fafafa;
-	background: -webkit-gradient(linear, left top, left bottom, from(#fbfbfb), to(#fafafa));
-	background: -moz-linear-gradient(top,  #fbfbfb,  #fafafa);
-}
-
-table tr.even td {
-	background: #f6f6f6;
-	background: -webkit-gradient(linear, left top, left bottom, from(#f8f8f8), to(#f6f6f6));
-	background: -moz-linear-gradient(top,  #f8f8f8,  #f6f6f6);
-}
-
-table tr:last-child td {
-	border-bottom:0;
-}
-
-table tr:last-child td:first-child {
-	border-bottom-left-radius:3px;
-}
-
-table tr:last-child td:last-child {
-	border-bottom-right-radius:3px;
-}
-
-table tr:hover td {
-	background: #f2f2f2;
-	background: -webkit-gradient(linear, left top, left bottom, from(#f2f2f2), to(#f0f0f0));
-	background: -moz-linear-gradient(top,  #f2f2f2,  #f0f0f0);	
-}
-
-ul {
-	padding: 0;
-	margin: 0 0 2em 0;
-	list-style-type: none;
-}
-
-li {
-	margin-bottom: 1em;
-}
-
-a.button-link {
+a.simple {
 	color: inherit;
-	font-size: 1.1em;
-	font-weight: 500;
 	text-decoration: none;
-    padding: 5px 10px;
-    background: #4479BA;
-    border-radius: 4px;
-    border: solid 1px #20538D;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
-	transition-duration: .5s;
-	display: inline-block;
-	min-width: 700px;
-}
-
-a.button-link:hover, a.button-link:focus {
-	background: #356094;
-    border: solid 1px #2A4E77;
-    text-decoration: none;
 }
