--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html
     head
         title= title
-        link(href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css', rel='stylesheet')
-        link(rel='stylesheet', href='/stylesheets/style.css')
+        link(href='//netdna.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css', rel='stylesheet')
+        link(href='/stylesheets/style.css', rel='stylesheet')
     body
         block content
