--- a/views/useredit.pug
+++ b/views/useredit.pug
@@ -1,42 +1,47 @@
 extends layout
 
 block content
-    form(method='POST' action='/users')
-        div.form-group
-        label(for='name') Userame:
-        input#username.form-control(type='text', placeholder='username' name='username')
-        div.form-group
-        label(for='pw') Password:
-        input#pw.form-control(type='password' name='password')
-        div.form-group
-        label(for='pw2') Confirm Password:
-        input#pw2.form-control(type='password' name='confirmPassword')
-        div.form-group
-        label(for='email') Email:
-        input#email.form-control(type='email', placeholder='user@example.com' name='email')
-        div.form-group
-        label(for='firstname') Firstname:
-        input#firstname.form-control(type='text', placeholder='firstname' name='firstname')
-        div.form-group
-        label(for='lastname') Lastname:
-        input#lastname.form-control(type='text', placeholder='lastname' name='lastname')
-        div.form-group
-        label(for='country') Country:
-        input#country.form-control(type='text', placeholder='country' name='country')
-        div.form-group
-        label(for='city') City:
-        input#city.form-control(type='text', placeholder='city' name='city')
-        div.form-group
-        label(for='street') Street:
-        input#street.form-control(type='text', placeholder='street' name='street')
-        div.form-group
-        label(for='creditcardcmp') Creditcard Company:
-        input#creditcardcmp.form-control(type='text', placeholder='Mastercard, Visa, etc.' name='creditcardcmp')
-        div.form-group
-        label(for='creditcardpan') Creditcard Pan:
-        input#creditcardpan.form-control(type='text', placeholder='5454545454545454' name='creditcardpan')
-        div.form-group
-        label(for='creditcardcvv') Creditcard CVV:
-        input#creditcardcvv.form-control(type='text', placeholder='123' name='creditcardcvv')
-
-        button.btn.btn-primary(type='submit') Save
+    h1.title= title
+    div.box
+        form(method='POST' action='/users')
+            div.form-group
+            label(for='username') Username:
+            input#username.form-control(type='text', placeholder='username', name='username', value=user.username)
+            div.form-group
+            label(for='pw') Password:
+            input#pw.form-control(type='password', name='password')
+            div.form-group
+            label(for='pw2') Confirm Password:
+            input#pw2.form-control(type='password', name='confirmPassword')
+            div.form-group
+            label(for='email') Email:
+            input#email.form-control(type='email', placeholder='mail@example.com', name='email', value=user.email)
+            div.form-group
+            label(for='firstname') Firstname:
+            input#firstname.form-control(type='text', placeholder='firstname', name='firstname', value=user.firstname)
+            div.form-group
+            label(for='lastname') Lastname:
+            input#lastname.form-control(type='text', placeholder='lastname', name='lastname', value=user.lastname)
+            div.form-group
+            label(for='country') Country:
+            input#country.form-control(type='text', placeholder='country', name='country', value=user.country)
+            div.form-group
+            label(for='city') City:
+            input#city.form-control(type='text', placeholder='city', name='city', value=user.city)
+            div.form-group
+            label(for='zipcode') Zip Code:
+            input#zipcode.form-control(type='text', placeholder='zip code', name='zipcode', value=user.zipcode)
+            div.form-group
+            label(for='street') Street:
+            input#street.form-control(type='text', placeholder='street', name='street', value=user.street)
+            div.form-group
+            label(for='creditcardcmp') Creditcard Company:
+            input#creditcardcmp.form-control(type='text', placeholder='Mastercard, Visa, etc.', name='creditcardcmp', value=user.creditcardcmp)
+            div.form-group
+            label(for='creditcardpan') Creditcard Pan:
+            input#creditcardpan.form-control(type='text', placeholder='5454545454545454', name='creditcardpan', value=user.creditcardpan)
+            div.form-group
+            label(for='creditcardcvv') Creditcard CVV:
+            input#creditcardcvv.form-control(type='text', placeholder='123', name='creditcardcvv', value=user.creditcardcvv)
+            br
+            button.btn.btn-primary.btn-lg(type='submit') Save
