--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -37,3 +37,15 @@ a.simple {
 	color: inherit;
 	text-decoration: none;
 }
+
+img.icon{
+	width: 32px;
+	height: 32px;
+	margin: 2px 10px;
+}
+
+img.icon-lg{
+	width: 64px;
+	height: 64px;
+	margin: 10px;
+}
