table header switches order

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 div.box{
-	background-color: lightblue;
+	background-color: lightsteelblue;
 	opacity: 0.9;
 	padding: 1.5em; 
 	border-radius: 4px;
