--- a/views/users.pug
+++ b/views/users.pug
@@ -7,8 +7,7 @@ block content
         form.form-inline(method='GET' action='/users')
             div.form-group
                 input#filter.form-control.input-lg(type='text', name='filter')
-                button.btn.btn-info(type='submit')
-                    span.glyphicon.glyphicon-search
+                button.btn.btn-info(type='submit') Filter
         div.table-responsiv
             table.table.table-striped
                 thead.thead-inverse
