--- a/views/users.pug
+++ b/views/users.pug
@@ -6,7 +6,7 @@ block content
         a(href='/user'): img.icon-lg(src='/images/add_user.png') 
         form.form-inline(method='GET' action='/users')
             div.form-group
-                input#filter.form-control.input-lg(type='text', name='filter')
+                input#filter.form-control.input-lg(type='text', name='filter', value=filter)
                 button.btn.btn-info(type='submit') Filter
         div.table-responsiv
             table.table.table-striped
