--- a/views/users.pug
+++ b/views/users.pug
@@ -24,4 +24,4 @@ block content
                             td #{user.email} 
                             td
                                 a(href='/user/'+user.id): img.icon(src='/images/edit_user.png')
-                                a(href='/#'): img.icon(src='/images/remove_user.png') 
+                                a(href='/users#'): img.icon(src='/images/remove_user.png') 
