--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,7 +26,7 @@ h1.title {
 	color: white;
 	font-family: Simpsons;
 	text-shadow: 4px 4px 8px #202020;
-	margin-bottom: 1em;
+	margin-bottom: .5em;
 }
 
 h2 {
@@ -41,7 +41,7 @@ a.simple {
 img.icon{
 	width: 32px;
 	height: 32px;
-	margin: 2px 10px;
+	margin: 0px 8px;
 }
 
 img.icon-lg{
