--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html
     head
         title= title
-        link(href='//netdna.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css', rel='stylesheet')
+        link(href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css', rel='stylesheet', integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u", crossorigin="anonymous")
         link(href='/stylesheets/style.css', rel='stylesheet')
     body
         block content
