--- a/views/users.pug
+++ b/views/users.pug
@@ -5,23 +5,25 @@ block content
     div.box
         form.form-inline-block.form-inline(method='GET' action='/users')
             div.form-group
-                input#filter.form-control.input-lg(type='text', name='filter', value=filter)
-                button.btn.btn-info(type='submit') Filter
+                input#filter.form-control.input-md(type='text', name='filter', value=filter)
+                button.btn.btn-info(type='submit')
+                    span.glyphicon.glyphicon-filter
         a(href='/user'): img.icon-lg(src='/images/add_user.png') 
+
         div.table-responsiv
-            table.table.table-striped
+            table.table.table-striped.table.bordered
                 thead.thead-inverse
                     tr
                         th: a.simple(href="users?orderby=lastname") Last Name
                         th: a.simple(href="users?orderby=firstname") First Name
                         th: a.simple(href="users?orderby=email") EMail
-                        th Edit
+                        th.text-right Edit
                 tbody
                     each user in users
                         tr 
                             td #{user.lastname}
                             td #{user.firstname} 
                             td #{user.email} 
-                            td
-                                a(href='/user/'+user.id): img.icon(src='/images/edit_user.png')
-                                a(href='/users#'): img.icon(src='/images/remove_user.png') 
+                            td.text-right
+                                a.simple(href='/user/'+user.id): img.icon(src='/images/edit_user.png')
+                                a.simple(href='/users#'): img.icon(src='/images/remove_user.png') 
