--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-	background-image: url("/images/bg.png");
+	background-image: url("/images/bg.jpg");
 	background-color: steelblue; 
 	background-repeat: no-repeat;
     background-position: center 0;
