--- a/views/admin.pug
+++ b/views/admin.pug
@@ -14,9 +14,9 @@ block content
                 thead.thead-inverse
                     tr
                         - var filterParam = filter ? '&filter=' + filter : ''
-                        th: a.simple(href='/users?orderby=lastname' + filterParam) Last Name
-                        th: a.simple(href='/users?orderby=firstname' + filterParam) First Name
-                        th: a.simple(href='/users?orderby=email' + filterParam) EMail
+                        th: a.simple(href='/admin?orderby=lastname' + filterParam) Last Name
+                        th: a.simple(href='/admin?orderby=firstname' + filterParam) First Name
+                        th: a.simple(href='/admin?orderby=email' + filterParam) EMail
                         th.text-right Edit
                 tbody
                     each user in users
@@ -26,4 +26,4 @@ block content
                             td #{user.email} 
                             td.text-right
                                 a.simple(href='/user/'+user.id): img.icon(src='/images/edit_user.png')
-                                a.simple(href='/users#'): img.icon(src='/images/remove_user.png') 
+                                a.simple(href='/admin#'): img.icon(src='/images/remove_user.png') 
