--- a/views/users.pug
+++ b/views/users.pug
@@ -7,7 +7,7 @@ block content
             div.form-group
                 input#filter.form-control.input-md(type='text', name='filter', value=filter)
                 button.btn.btn-info(type='submit') Filter
-        a(href='/admin'): img.icon-lg(src='/images/edit_user.png') 
+        a(href='/admin/users'): img.icon-lg(src='/images/edit_user.png') 
 
         div.table-responsiv
             table.table.table-striped.table.bordered
