--- a/views/admin.pug
+++ b/views/admin.pug
@@ -3,20 +3,20 @@ extends layout
 block content
     h1.title= title
     div.box
-        form.form-inline-block.form-inline(method='GET' action='/admin')
+        form.form-inline-block.form-inline(method='GET' action='/admin/users')
             div.form-group
                 input#filter.form-control.input-md(type='text', name='filter', value=filter)
                 button.btn.btn-info(type='submit') Filter
-        a(href='/user'): img.icon-lg(src='/images/add_user.png') 
+        a(href='/admin/users/0'): img.icon-lg(src='/images/add_user.png') 
 
         div.table-responsiv
             table.table.table-striped.table.bordered
                 thead.thead-inverse
                     tr
                         - var filterParam = filter ? '&filter=' + filter : ''
-                        th: a.simple(href='/admin?orderby=lastname' + filterParam) Last Name
-                        th: a.simple(href='/admin?orderby=firstname' + filterParam) First Name
-                        th: a.simple(href='/admin?orderby=email' + filterParam) EMail
+                        th: a.simple(href='/admin/users?orderby=lastname' + filterParam) Last Name
+                        th: a.simple(href='/admin/users?orderby=firstname' + filterParam) First Name
+                        th: a.simple(href='/admin/users?orderby=email' + filterParam) EMail
                         th.text-right Edit
                 tbody
                     each user in users
@@ -25,5 +25,5 @@ block content
                             td #{user.firstname} 
                             td #{user.email} 
                             td.text-right
-                                a.simple(href='/user/'+user.id): img.icon(src='/images/edit_user.png')
-                                a.simple(href='/admin#'): img.icon(src='/images/remove_user.png') 
+                                a.simple(href='/admin/users/'+user.id): img.icon(src='/images/edit_user.png')
+                                a.simple(href='/admin/users#'): img.icon(src='/images/remove_user.png') 
