--- a/views/edit_customer.pug
+++ b/views/edit_customer.pug
@@ -13,6 +13,11 @@ block content
                 label(for='pw') Password:
                 input#pw.form-control(type='password', name='password')
             div.form-group
+                label(for='role') Role:
+                select#role.form-control.select(name='role', value=customer.role)
+                    option(value="ADMIN", selected= customer.role == 'ADMIN') Administrator
+                    option(value="CUSTOMER", selected= customer.role == 'CUSTOMER') Customer
+            div.form-group
                 label(for='pw2') Confirm Password:
                 input#pw2.form-control(type='password', name='confirmPassword')
             div.form-group
