new background gradient

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-	background: linear-gradient(to right, lightskyblue , gray);
+	background: linear-gradient(to right, lightskyblue , #2053aD);
 	padding: 20px;
 	color:#2A4E77;
 	font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
