removed checkbox from login form

--- a/views/customers.pug
+++ b/views/customers.pug
@@ -9,6 +9,7 @@ block content
                 button.btn.btn-info(type='submit') Filter
         if mode == "admin"
             a(href='/admin/customers/0'): img.icon-lg(src='/images/add_customer.png') 
+            a(href='/logout'): img.icon-lg(src='/images/logout.png') 
         else
             a(href='/admin/customers'): img.icon-lg(src='/images/edit_customer.png') 
 
