--- a/views/customers.pug
+++ b/views/customers.pug
@@ -40,15 +40,16 @@ block content
                                 td.nowrap.text-right
                                     a.simple(href='/admin/customers/' + customer.id, title='Edit'): img.icon(src='/images/edit_customer.png')
                                     a.simple(href='#', onclick='deleteCustomer(' + customer.id + '); return false;' , title='Delete'): img.icon(src='/images/remove_customer.png') 
-    script.
-        var deleteCustomer = function(id){
-            confirm('Are you sure you want to delete"' + id + '"?');
-            var xhr = new XMLHttpRequest();
-            xhr.onreadystatechange = function(e) {
-                if (xhr.readyState == 4 && xhr.status == 200) {
-                    location.reload();
+    if mode == 'admin'
+        script.
+            var deleteCustomer = function(id){
+                confirm('Are you sure you want to delete"' + id + '"?');
+                var xhr = new XMLHttpRequest();
+                xhr.onreadystatechange = function(e) {
+                    if (xhr.readyState == 4 && xhr.status == 200) {
+                        location.reload();
+                    }
                 }
+                xhr.open('DELETE', '/admin/customers/' + id, true);
+                xhr.send();
             }
-            xhr.open('DELETE', '/admin/customers/' + id, true);
-            xhr.send();
-        }
