--- a/views/error.pug
+++ b/views/error.pug
@@ -1,6 +1,6 @@
 extends layout
 
 block content
-  h1.title= message
-  h2 HTTP Status: #{error.status}
-  pre #{error.stack}
+    div.box
+        h2 HTTP Status: #{error.status}
+        pre #{error.stack}
