--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,4 +6,5 @@ html
         link(href='/stylesheets/bootstrap.min.css', rel='stylesheet', integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi", crossorigin="anonymous")
         link(href='/stylesheets/style.css', rel='stylesheet')
     body
+        h1.title= title
         block content
