--- a/views/customers.pug
+++ b/views/customers.pug
@@ -8,10 +8,10 @@ block content
                 input#filter.form-control.input-md(type='text', name='filter', value=filter)
                 button.btn.btn-info(type='submit') Filter
         if mode == 'admin'
-            a(href='/admin/customers/add', title='Add Customer'): img.icon-lg(src='/images/add_customer.png') 
-            a(href='/logout', title='Logout'): img.icon-lg(src='/images/logout.png') 
+            a(href='/admin/customers/add', title='Add Customer'): img.icon-lg(alt='Add Customer', src='/images/add_customer.png') 
+            a(href='/logout', title='Logout'): img.icon-lg(alt='Logout', src='/images/logout.png') 
         else
-            a(href='/admin/customers', title='Edit Customer'): img.icon-lg(src='/images/edit_customer.png') 
+            a(href='/admin/customers', title='Edit Customer'): img.icon-lg(alt='Edit Customer', src='/images/edit_customer.png') 
 
         div.table-responsive
             table.table.table-striped.table.bordered
@@ -37,8 +37,8 @@ block content
                             td.email #{customer.email} 
                             if mode == 'admin'
                                 td.nowrap.text-right
-                                    a.simple(href='/admin/customers/' + customer.id, title='Edit'): img.icon(src='/images/edit_customer.png')
-                                    a.simple(href='#', onclick='deleteCustomer(' + customer.id + '); return false;' , title='Delete'): img.icon(src='/images/remove_customer.png') 
+                                    a.simple(href='/admin/customers/' + customer.id, title='Edit'): img.icon(alt='Edit', src='/images/edit_customer.png')
+                                    a.simple(href='#', onclick='deleteCustomer(' + customer.id + '); return false;' , title='Delete'): img.icon(alt='Delete', src='/images/remove_customer.png') 
     if mode == 'admin'
         script.
             var deleteCustomer = function(id){
