--- a/views/customers.pug
+++ b/views/customers.pug
@@ -2,28 +2,28 @@ extends layout
 
 block content
     div.box
-        - var actionUrl = (mode == 'admin') ? '/admin/customers' : '/customers'
+        - var actionUrl = (mode == 'admin') ? '/protected/customers' : '/public/customers'
         form.form-inline-block.form-inline(method='GET' action=actionUrl)
             div.form-group
                 input#filter.form-control.input-md(type='text', name='filter', value=filter)
                 button.btn.btn-info(type='submit') Filter
         if mode == 'admin'
-            a(href='/admin/customers/add', title='Add Customer'): img.icon-lg(alt='Add Customer', src='/images/add_customer.png') 
+            a(href='/protected/customers/add', title='Add Customer'): img.icon-lg(alt='Add Customer', src='/images/add_customer.png') 
             a(href='/logout', title='Logout'): img.icon-lg(alt='Logout', src='/images/logout.png') 
         else
-            a(href='/admin/customers', title='Edit Customer'): img.icon-lg(alt='Edit Customer', src='/images/edit_customer.png') 
+            a(href='/protected/customers', title='Edit Customer'): img.icon-lg(alt='Edit Customer', src='/images/edit_customer.png') 
 
         div.table-responsive
             table.table.table-striped.table.bordered
                 thead.thead-inverse
                     tr
                         - var filterParam = filter ? '&filter=' + filter : ''
-                        th: a.simple(href='/admin/customers?orderby=username' + filterParam) Username
+                        th: a.simple(href='/protected/customers?orderby=username' + filterParam) Username
                         if mode == 'admin'
-                            th: a.simple(href='/admin/customers?orderby=username' + filterParam) Role
-                        th: a.simple(href='/admin/customers?orderby=lastname' + filterParam) Lastname
-                        th: a.simple(href='/admin/customers?orderby=firstname' + filterParam) Firstname
-                        th.email: a.simple(href='/admin/customers?orderby=email' + filterParam) EMail
+                            th: a.simple(href='/protected/customers?orderby=username' + filterParam) Role
+                        th: a.simple(href='/protected/customers?orderby=lastname' + filterParam) Lastname
+                        th: a.simple(href='/protected/customers?orderby=firstname' + filterParam) Firstname
+                        th.email: a.simple(href='/protected/customers?orderby=email' + filterParam) EMail
                         if mode == 'admin'
                             th.text-right Edit
                 tbody
@@ -37,7 +37,7 @@ block content
                             td.email #{customer.email}
                             if mode == 'admin'
                                 td.nowrap.text-right
-                                    a.simple(href='/admin/customers/' + customer.id, title='Edit'): img.icon(alt='Edit', src='/images/edit_customer.png')
+                                    a.simple(href='/protected/customers/' + customer.id, title='Edit'): img.icon(alt='Edit', src='/images/edit_customer.png')
                                     a.simple(href='#', onclick='deleteCustomer(' + customer.id + '); return false;' , title='Delete'): img.icon(alt='Delete', src='/images/remove_customer.png') 
     if mode == 'admin'
         script.
@@ -49,6 +49,6 @@ block content
                         location.reload();
                     }
                 }
-                xhr.open('DELETE', '/admin/customers/' + id, true);
+                xhr.open('DELETE', '/protected/rest/customers' + id, true);
                 xhr.send();
             }
