--- a/views/edit_customer.pug
+++ b/views/edit_customer.pug
@@ -2,8 +2,8 @@ extends layout
 
 block content
     div.box
-        a(href='/admin/customers', title='List Customers'): img.icon-lg(alt='List Customers', src='/images/customer_group.png') 
-        form(method='POST' action='/admin/customers')
+        a(href='/protected/customers', title='List Customers'): img.icon-lg(alt='List Customers', src='/images/customer_group.png') 
+        form(method='POST' action='/protected/customers')
             input(type='hidden', name='id', value=customer.id)
             div.form-group
                 label(for='customername') Username:
