fixed table border css class

--- a/views/customers.pug
+++ b/views/customers.pug
@@ -14,7 +14,7 @@ block content
             a(href='/protected/customers', title='Edit Customer'): img.icon-lg(alt='Edit Customer', src='/images/edit_customer.png') 
 
         div.table-responsive
-            table.table.table-striped.table.bordered
+            table.table.table-striped
                 thead.thead-inverse
                     tr
                         - var filterParam = filter ? '&filter=' + filter : ''
