--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,8 +2,7 @@ doctype html
 html
     head
         title= title
- 
-        link(href='/stylesheets/bootstrap.min.css', rel='stylesheet', integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi", crossorigin="anonymous")
+        link(rel='stylesheet', href='/stylesheets/bootstrap.min.css', integrity='sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ', crossorigin='anonymous')
         link(href='/stylesheets/style.css', rel='stylesheet')
     body
         h1.title= title
